--- a/dashboard/static/css/analyser.css
+++ b/dashboard/static/css/analyser.css
@@ -1,3 +1,19 @@
+#graph {
+  display: inline-block;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  margin: 0;
+  padding: 0;
+  z-index: 1;
+}
+
+#filter {
+  position: absolute;
+  margin-left: 1em;
+  z-index: 2;
+}
+
 .navbar {
   z-index: 4;
 }
