--- a/investigations/templates/investigations/reviewinvest.html
+++ b/investigations/templates/investigations/reviewinvest.html
@@ -48,6 +48,7 @@
 
             <!-- Process Artifacts -->
             {% include "investigations/windows/process_artifacts/process_scan.html" %}
+            {% include "investigations/windows/process_artifacts/process_list.html" %}
             {% include "investigations/windows/process_artifacts/process_graph.html" %}
             {% include "investigations/windows/process_artifacts/process_privileges.html" %}
             {% include "investigations/windows/process_artifacts/process_cmdline.html" %}
