--- a/investigations/templates/investigations/windows/sidebar.html
+++ b/investigations/templates/investigations/windows/sidebar.html
@@ -9,6 +9,7 @@
             <div class="collapse show" id="collapseProcess">
               <ul class="list-group-item bg-light">
                 <li class="bg-light list-group-horizontal-md text-truncate" data-bs-parent="#sidebar"><i class="text-dark bi bi bi-box"></i> <a id="PsScanLink" href="#" class="text-dark">PsScan</a></li>
+                <li class="bg-light list-group-horizontal-md text-truncate" data-bs-parent="#sidebar"><i class="text-dark bi bi bi-box"></i> <a id="PsListLink" href="#" class="text-dark">PsList</a></li>
                 <li class="bg-light list-group-horizontal-md text-truncate" data-bs-parent="#sidebar"><i class="text-dark bi bi bi-box"></i> <a id="PsTreeLink" href="#" class="text-dark">PsTree</a></li>
                 <li class="bg-light list-group-horizontal-md text-truncate" data-bs-parent="#sidebar"><i class="text-dark bi bi bi-box"></i> <a id="PrivsLink" href="#" class="text-dark">Privs</a></li>
                 <li class="bg-light list-group-horizontal-md text-truncate" data-bs-parent="#sidebar"><i class="text-dark bi bi bi-box"></i> <a id="CmdLineLink" href="#" class="text-dark">CmdLine</a></li>
