Added Detection results in reviewinvest

--- a/investigations/templates/investigations/reviewinvest.html
+++ b/investigations/templates/investigations/reviewinvest.html
@@ -76,6 +76,9 @@
             {% include "investigations/windows/ma_artifacts/ma_dumpprocess.html" %}
             {% include "investigations/windows/ma_artifacts/ma_dumpfile.html" %}
 
+            <!-- Detection -->
+            {% include "investigations/windows/detection/detection.html" %}
+
         </main>
       {% else %}
         {% include "investigations/linux/sidebar.html" %}
