--- a/analyser/templates/analyser/rules.html
+++ b/analyser/templates/analyser/rules.html
@@ -40,9 +40,11 @@
                             <td>{{r.enabled}}</td>
                             <td>
                                 <a class="btn border border-light btn-sm" role="button"
-                                    onclick="Toggle({{r.id}})">Toggle</a>
+                                    onclick="Toggle('{{r.id}}')">Toggle</a>
+                                <a class="btn border border-light btn-sm" role="button"
+                                    onclick="Download('{{r.id}}')">Download</a>
                                 <a class="btn border border-light btn-danger btn-sm" role="button"
-                                    onclick="DeleteRule({{r.id}})">Delete</a>
+                                    onclick="DeleteRule('{{r.id}}')">Delete</a>
                             </td>
                         </tr>
                         {% endfor %}
@@ -117,6 +119,49 @@
             processData: false
         });
     }
+
+    function Download(id){
+      const csrf = document.getElementsByName('csrfmiddlewaretoken');
+      const fd = new FormData();
+      let filename = "rule.yml"
+      fd.append('csrfmiddlewaretoken', csrf[0].value);
+      fd.append('id', id);
+      $.ajax({
+        type:'POST',
+        url: "{% url 'download_rule' %}",
+        enctype: 'multipart/form-data',
+        data: fd,
+        beforeSend: function(){
+          $('#proc-message').html("Requesting download...");
+          $('.toast-proc').toast('show');
+        },
+        success: function(data){
+          //Convert the Byte Data to BLOB object.
+                    var blob = new Blob([data], { type: "application/octetstream" });
+                    //Check the Browser type and download the File.
+                    var isIE = false || !!document.documentMode;
+                    if (isIE) {
+                        window.navigator.msSaveBlob(blob, filename);
+                    } else {
+                        var url = window.URL || window.webkitURL;
+                        link = url.createObjectURL(blob);
+                        var a = $("<a />");
+                        a.attr("download", filename);
+                        a.attr("href", link);
+                        $("body").append(a);
+                        a[0].click();
+                        $("body").remove(a);
+                    }
+        },
+        error: function(error){
+          $('#proc-error-message').html("Download failed ! :(");
+          $('.toast-proc-error').toast('show');
+        },
+        cache: false,
+        contentType : false,
+        processData: false
+      });
+  }
 
 </script>
 {% endblock content %}
