--- a/investigations/templates/investigations/windows/ma_artifacts/ma_filescan.html
+++ b/investigations/templates/investigations/windows/ma_artifacts/ma_filescan.html
@@ -1,4 +1,18 @@
 <!-- FileScan plugin results -->
+<div class="modal fade" id="showVirustotal" tabindex="-1" aria-labelledby="showVirustotal" aria-hidden="true">
+  <div class="modal-dialog modal-lg">
+    <div class="modal-content bg-light">
+      <div class="modal-header bg-light">
+        <h5 class="modal-title">Virustotal results</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div>
+        <pre id="virustotal-content">
+        </pre>
+      </div>
+    </div>
+  </div>
+</div>
 <div class="collapse mt-5 plugin FileScan">
   <div class="d-inline">
     <input class="form-control mb-3" id="searchFileScan" type="text" placeholder="Search..">
@@ -19,8 +33,10 @@
         <td style="word-wrap:break-word;">{{files.Name}}</td>
         <td>{{files.Size}}</td>
         <td>
-          <a class="btn border border-light btn-sm" role="button" onclick="event.stopPropagation(); Dump('{{files.Offset}}');">Dump</a>
-          <a class="btn border border-light btn-sm" role="button" onclick="event.stopPropagation(); Virustotal('{{files.pk}}');">Virustotal</a>
+          <a class="btn border border-light btn-sm" role="button"
+            onclick="event.stopPropagation(); Dump('{{files.Offset}}');">Dump</a>
+          <a class="btn border border-light btn-sm" role="button"
+            onclick="event.stopPropagation(); Virustotal('{{files.pk}}');">Virustotal</a>
         </td>
       </tr>
       {% endfor %}
@@ -49,8 +65,18 @@
       },
       success: function (response) {
         console.log(response['message']);
-        $('#proc-message').html(response['message']);
-        $('.toast-proc-error').toast('show');
+        switch (response['message']['data']['type']) {
+          case "analysis":
+            $('#proc-message').html("Virustotal is still processing your file");
+            $('.toast-proc-error').toast('show');
+            break;
+          case "file":
+            document.getElementById("virustotal-content").innerHTML = JSON.stringify(response['message'],undefined,2);
+            $("#showVirustotal").modal("show");
+            break;
+          default:
+            break;
+        }
       },
       error: function (error) {
         console.log(error);
